src/snapshots/tests__tests::test_source-4.snap
---
created: "2019-06-11T12:13:10.625438023Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Sources(
    [
        Unknown
    ]
)
