src/snapshots/tests__tests::test_sources-3.snap
---
created: "2019-06-11T12:13:10.618638726Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
[
    Unknown,
    Unknown
]
