src/snapshots/tests__tests::test_tptp_input-2.snap
---
created: "2019-06-11T12:13:10.614060288Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Fof(
    LowerWord(
        "test"
    ),
    Axiom,
    Boolean(
        true
    ),
    None
)
