src/snapshots/tests__tests::test_tptp_input.snap
---
created: "2019-06-11T12:13:10.603737067Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Include(
    Included(
        "test"
    ),
    None
)
