src/snapshots/tests__tests::test_tptp_input_or_eof-2.snap
---
created: "2019-06-11T12:13:10.618624840Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
None
