src/snapshots/tests__tests::test_unknown_source.snap
---
created: "2019-06-11T12:13:10.611449146Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Unknown
